--- a/xcode/diary/diary/Base.lproj/Main.storyboard
+++ b/xcode/diary/diary/Base.lproj/Main.storyboard
@@ -10,11 +10,11 @@
             <objects>
                 <viewController title="First" id="CZ4-MO-1fc" customClass="NewEntryController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2VE-Yg-loa" userLabel="rootview">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="949"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="1096"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" keyboardDismissMode="onDrag" id="Wem-oN-R53">
-                                <rect key="frame" x="0.0" y="0.0" width="325" height="949"/>
+                                <rect key="frame" x="0.0" y="0.0" width="325" height="1096"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" id="TJJ-MA-QZf" userLabel="subview">
@@ -76,7 +76,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                                                 </timeZone>
                                             </datePicker>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="ehO-cq-g4c">
-                                                <rect key="frame" x="22" y="880" width="283" height="30"/>
+                                                <rect key="frame" x="22" y="919" width="283" height="30"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <state key="normal" title="Save">
                                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -130,7 +130,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             </imageView>
                                         </subviews>
-                                        <color key="backgroundColor" red="0.7607843876" green="0.81568634510000004" blue="0.90980398650000005" alpha="1" colorSpace="deviceRGB"/>
+                                        <color key="backgroundColor" red="0.0039215688593685627" green="0.62352943420410156" blue="1" alpha="0.0" colorSpace="deviceRGB"/>
                                     </view>
                                 </subviews>
                                 <userDefinedRuntimeAttributes>
@@ -144,6 +144,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                     </view>
                     <extendedEdge key="edgesForExtendedLayout"/>
                     <tabBarItem key="tabBarItem" title="" image="addEntry.png" id="u1e-5L-l1D"/>
+                    <navigationItem key="navigationItem" title="asdasd" id="LbC-k6-njv"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <connections>
                         <outlet property="datePicker" destination="J2D-sh-JEI" id="XG9-CE-IT0"/>
@@ -151,6 +152,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                         <outlet property="rootview" destination="2VE-Yg-loa" id="bPT-ac-ef6"/>
                         <outlet property="sad" destination="nsQ-Ph-lpL" id="Bqu-xM-A9o"/>
                         <outlet property="scroll" destination="Wem-oN-R53" id="I8a-9P-vi3"/>
+                        <outlet property="selectImage" destination="b1i-vV-6Yr" id="6RI-2D-gmJ"/>
                         <outlet property="subView" destination="TJJ-MA-QZf" id="19g-NM-URN"/>
                         <outlet property="superHappy" destination="ecS-Ot-h90" id="1Qu-SF-045"/>
                         <outlet property="superSad" destination="3qS-yv-s3v" id="Ift-Hj-bjC"/>
@@ -255,7 +257,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                     </tableView>
                     <extendedEdge key="edgesForExtendedLayout"/>
                     <navigationItem key="navigationItem" id="dGh-TP-G2r">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="6lo-bE-xM6">
+                        <barButtonItem key="rightBarButtonItem" title="Neuer Eintrag" id="6lo-bE-xM6">
                             <connections>
                                 <action selector="newEntry:" destination="6jI-XC-TSV" id="5zg-Rc-jQO"/>
                             </connections>
@@ -273,7 +275,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4K6-aq-VkO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="784" y="382"/>
+            <point key="canvasLocation" x="1000" y="816"/>
         </scene>
         <!--Second View Controller - Second-->
         <scene sceneID="ot8-2e-RuS">
@@ -309,10 +311,12 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
             <objects>
                 <tabBarController id="8YX-ce-x5E" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" backgroundImage="holzBG.png" id="JQR-rB-NYL">
+                    <tabBar key="tabBar" contentMode="scaleAspectFill" backgroundImage="holzBG.png" id="JQR-rB-NYL">
                         <rect key="frame" x="0.0" y="431" width="320" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
+                        <color key="tintColor" red="0.015686275437474251" green="0.011764707043766975" blue="0.0078431377187371254" alpha="1" colorSpace="deviceRGB"/>
                     </tabBar>
                     <connections>
                         <segue destination="XVj-rW-A5W" kind="relationship" relationship="viewControllers" id="xTD-9l-woj"/>
@@ -324,13 +328,13 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
             </objects>
             <point key="canvasLocation" x="-64" y="-324"/>
         </scene>
-        <!--Navigation Controller - Liste-->
+        <!--Navigation Controller-->
         <scene sceneID="R9j-iO-l1F">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="XVj-rW-A5W" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Liste" id="JAl-tR-fbr"/>
+                    <tabBarItem key="tabBarItem" title="" image="list.png" id="JAl-tR-fbr"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="gbe-a0-ZVF">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" shadowImage="holzBG.png" backIndicatorImage="holzBG.png" backIndicatorTransitionMaskImage="holzBG.png" id="gbe-a0-ZVF">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -338,18 +342,20 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                     <connections>
                         <segue destination="6jI-XC-TSV" kind="relationship" relationship="rootViewController" id="PhY-ee-Soa"/>
                         <segue destination="5Iy-vR-vFS" kind="push" id="8C3-6d-o5Q"/>
+                        <segue destination="CZ4-MO-1fc" kind="push" id="28y-ys-xtd"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DUd-o9-bbS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="334" y="160"/>
+            <point key="canvasLocation" x="400" y="424"/>
         </scene>
     </scenes>
     <resources>
-        <image name="addEntry.png" width="32" height="36"/>
+        <image name="addEntry.png" width="30" height="30"/>
         <image name="crying.png" width="128" height="128"/>
         <image name="feelGood.png" width="128" height="128"/>
         <image name="holzBG.png" width="435" height="50"/>
+        <image name="list.png" width="30" height="30"/>
         <image name="rhappy.png" width="128" height="128"/>
         <image name="sad.png" width="128" height="128"/>
         <image name="second" width="30" height="30"/>
@@ -360,4 +366,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="SUk-Ux-ee1"/>
+    </inferredMetricsTieBreakers>
 </document>
